<resources>
    <string name="app_name">FundControl</string>


    <string name="create_error">Input value of transaction!</string>


    <string name="flag_of_county">flag of county</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="expenses">Expenses</string>
    <string name="incomes">Incomes</string>
    <string name="total">Total</string>
    <string name="show_detailed">show detailed</string>
    <string name="add_transaction">add transaction</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="all">All</string>
    <string name="category">Category:</string>
    <string name="value">Value:</string>
    <string name="note">Note:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="date">Date:</string>
    <string name="delete">Delete</string>
    <string name="transactions">Transactions</string>
</resources>
