<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/back_card"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:text="@string/app_name"
                android:textColor="@color/colorText"
                android:textColorLink="#000000"
                android:textSize="24sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_revenue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="0"
                android:textColor="@color/colorGreen" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_expenditures"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="0"
                android:textColor="@color/colorRed" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="0"
                android:textColor="@color/colorText" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l_routes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_detailed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/my_button"
            android:text="@string/show_detailed"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/btn_add_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/my_button"
            android:text="@string/add_transaction"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button"
            android:text="@string/settings"
            android:textColor="@color/colorText" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/l_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_settings"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:text="@string/settings"
            android:textColor="@color/colorText"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_change_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/my_button"
                android:padding="8dp"
                android:text="@string/change_language"
                android:textColor="@color/colorText" />

            <ImageView
                android:id="@+id/iv_language_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/flag_of_county" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>