<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".CreateTransactionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="297dp"
        android:background="@drawable/back_card"
        android:orientation="vertical"
        android:padding="12dp">

        <RadioGroup
            android:id="@+id/toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/control_switch_background_border"
            android:checkedButton="@+id/sw_create_expense"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/sw_create_expense"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/control_switch_background_selector"
                android:button="@null"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/expense"
                android:textColor="@color/control_switch_color_selector" />

            <RadioButton
                android:id="@+id/sw_create_income"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/control_switch_background_selector"
                android:button="@null"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/income"
                android:textColor="@color/control_switch_color_selector" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="344dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textColor="@color/colorText" />

                <TextView
                    android:id="@+id/tv_title_genre"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/category"
                    android:textColor="@color/colorText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/value"
                    android:textColor="@color/colorText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/note"
                    android:textColor="@color/colorText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="251dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/et_calendar"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textColor="@color/colorText"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/sp_category_chooser"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:popupBackground="@color/colorSpinnerBackground"
                    android:textColor="@color/colorText"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_value"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="start"
                    android:inputType="number"
                    android:textColor="@color/colorText"
                    android:textSize="20sp"
                    android:theme="@style/MyEditTextTheme" />

                <EditText
                    android:id="@+id/et_note"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorText"
                    android:textSize="20sp"
                    android:theme="@style/MyEditTextTheme" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:background="@drawable/my_button"
            android:text="@string/cancel"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button"
            android:text="@string/save"
            android:textColor="@color/colorText" />
    </LinearLayout>


</LinearLayout>